--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ categories:
 - eagermonkey
 ---
 
-<p>When we're not swinging from the trees or munching on nuts we like nothing better than working on our projects; a bit like beavers .... but with thinner tails and smaller teeth!</p>
+<p class='intro'>When we're not swinging from the trees or munching on nuts we like nothing better than working on our projects; a bit like beavers .... but with thinner tails and smaller teeth!</p>
