--- a/blog.html
+++ b/blog.html
@@ -5,4 +5,11 @@ categories:
 - blog
 ---
 
-
+{% for post in site.categories.blog limit:3 %}
+<div class='highlight{{ forloop.index }} chunk clearfix'>
+  <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span>{{ post.date | date_to_string }}</span></a></h3>
+  <div class='post_content clearfix'>
+  {{ post.content }}
+  </div>
+</div>
+{% endfor %}
