--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ categories:
 - eagermonkey
 ---
 
-<p class='highlight1'>When we're not swinging from the trees or munching on a banana we like nothing better than working on our projects; a bit like beavers .... but with thinner tails and smaller teeth!</p>
+<p class='introduction'>When we're not swinging from the trees or munching on a banana we like nothing better than working on our projects; a bit like beavers .... but with thinner tails and smaller teeth!</p>
 
 
