--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@ categories:
 
 Some intro stuff goes here...
 
-{% for post in site.categories.blog limit:3 %}
-<div class='highlight{{ forloop.index }} chunk clearfix list'>
+{% for post in site.categories.blog %}
+<div class='highlight{% cycle 'cl': '1', '2' %} chunk clearfix list'>
   <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span class='date'>{{ post.date | date_to_string }}</span></a></h3>
   <div class='post_content clearfix'>
   {{ post.content | truncatewords:200 }}
