--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ categories:
 - blog
 ---
 
-Some intro stuff goes here...
+<p class='introduction'>Some intro stuff goes here...</p>
 
 {% for post in site.categories.blog %}
 <div class='highlight{% cycle 'cl': '1', '2' %} chunk clearfix list cycled'>
