--- a/portfolio.html
+++ b/portfolio.html
@@ -6,4 +6,4 @@ categories:
 ---
 
 
-Intro about working with the eager monkey and what we do..
+<p class='introduction'>Intro about working with the eager monkey and what we do..</p>
