--- a/about.html
+++ b/about.html
@@ -9,24 +9,24 @@ categories:
 
 
   
-<div class='author highlight1 clearfix'>
-  <h3><a href="/tamarin.html" title="Tamarins profile page">Tamarin</a></h3>
+<div class='author highlight1 clearfix list'>
   <a href="/tamarin.html" title="Tamarins profile page"><img src="/images/tamarin.jpg" title="Tamarins icon" alt="Tamarins icon" class='author_icon'/></a>
+  <h3><a href="/tamarin.html" title="Tamarins profile page">Tamarin</a></h3>
 
   <p class='read_more'><a href="/tamarin.html" title="Tamarins profile page">Read more &raquo;</a></p>
 
 </div>
 
 
-<div class='author highlight2 clearfix'>
+<div class='author highlight2 clearfix list'>
+  <a href="/marmoset.html" title="Marmosets profile page"><img src="/images/marmoset.jpg" title="Marmosets icon" alt="Marmosets icon" class='author_icon'/></a>  
   <h3><a href="/marmoset.html" title="Marmosets profile page">Marmoset</a></h3>
-  <a href="/marmoset.html" title="Marmosets profile page"><img src="/images/marmoset.jpg" title="Marmosets icon" alt="Marmosets icon" class='author_icon'/></a>
 
   <p class='read_more'><a href="/marmoset.html" title="Marmosets profile page">Read more &raquo;</a></p>
 
 </div>
 
-<div class='author highlight1 clearfix'>
+<div class='author highlight1 clearfix list'>
   <h3><a href="/??.html" title="?? profile page">??</a></h3>
   <a href="/??.html" title="?? profile page"><img src="/images/??.jpg" title="?? icon" alt="?? icon" class='author_icon'/></a>
 
