testing the author tag

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ categories:
 <p class='introduction'>Some intro stuff goes here...</p>
 
 {% for post in site.categories.blog %}
-<div class='highlight{% cycle 'cl': '1', '2' %} chunk clearfix list cycled'>
+<div class='highlight{% cycle 'cl': '1', '2' %} chunk clearfix list cycled {{ post.author }}'>
   <h3><a href="{{ post.url }}" title="{{ post.title }} - {{ post.date | date_to_string }}">{{ post.title }} <span class='date'>{{ post.date | date_to_string }}</span></a></h3>
   <div class='post_content clearfix'>
   {{ post.content | truncatewords:200 }}
