--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ categories:
 
   
 <div class='author highlight1 clearfix list'>
-  <a href="/tamarin.html" title="Tamarins profile page"><img src="/images/tamarin.jpg" title="Tamarins icon" alt="Tamarins icon" class='author_icon'/></a>
+  <a href="/tamarin.html" title="Tamarins profile page"><img src="/images/authors/tamarin/small.jpg" title="Tamarins icon" alt="Tamarins icon" class='author_icon'/></a>
   <h3><a href="/tamarin.html" title="Tamarins profile page">Tamarin</a></h3>
 
   <p class='read_more'><a href="/tamarin.html" title="Tamarins profile page">Read more &raquo;</a></p>
@@ -19,7 +19,7 @@ categories:
 
 
 <div class='author highlight2 clearfix list'>
-  <a href="/marmoset.html" title="Marmosets profile page"><img src="/images/marmoset.jpg" title="Marmosets icon" alt="Marmosets icon" class='author_icon'/></a>  
+  <a href="/marmoset.html" title="Marmosets profile page"><img src="/images/authors/marmoset/small.jpg" title="Marmosets icon" alt="Marmosets icon" class='author_icon'/></a>  
   <h3><a href="/marmoset.html" title="Marmosets profile page">Marmoset</a></h3>
 
   <p class='read_more'><a href="/marmoset.html" title="Marmosets profile page">Read more &raquo;</a></p>
@@ -28,7 +28,7 @@ categories:
 
 <div class='author highlight1 clearfix list'>
   <h3><a href="/??.html" title="?? profile page">??</a></h3>
-  <a href="/??.html" title="?? profile page"><img src="/images/??.jpg" title="?? icon" alt="?? icon" class='author_icon'/></a>
+  <a href="/??.html" title="?? profile page"><img src="/images/authors/??/small.jpg" title="?? icon" alt="?? icon" class='author_icon'/></a>
 
   <p class='read_more'><a href="/??.html" title="?? profile page">Read more &raquo;</a></p>
 
