--- a/about.html
+++ b/about.html
@@ -3,6 +3,18 @@ layout: default
 title: More about the monkeys...
 categories:
 - about
+keywords:
+- about
+- information
+- eager monkey
+- people
+- who we are
+- what we do
+- profiles
+- profile summaries
+- tamarin
+- marmoset
+description: "Information about eagermonkey; what we do, who we are and a whole bunch more."
 ---
 
 <p class="introduction">Some intro copy about eagermonkey</p>
