--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,13 @@ layout: default
 title: Blogs
 categories:
 - blog
+keywords:
+- blog
+- latest posts
+- most recent
+- tamarin
+- marmoset
+description: "All the latest blog posts from eagermonkeys authors."
 ---
 
 <p class='introduction'>Some intro stuff goes here...</p>
