--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: Howdy!
+title: Howdy! Welcome to Eager Monkey Web Services
 home: "true"
 categories:
 - homepage
 - eagermonkey
 ---
 
-<p class='introduction'>When we're not swinging from the trees or munching on a banana we like nothing better than working on our projects; a bit like beavers .... but with thinner tails and smaller teeth!</p>
+<p class='introduction'>Welcome!</p>
 
 
